math-core/tests/snapshots/wiki_test__wiki062.snap
---
source: math-core/tests/wiki_test.rs
expression: "\\succ, \\nsucc, \\succeq, \\nsucceq, \\succneqq"
---
<math>
    <mo lspace="0" rspace="0">≻</mo>
    <mo>,</mo>
    <mo lspace="0" rspace="0">⊁</mo>
    <mo>,</mo>
    <mo lspace="0" rspace="0">⪰</mo>
    <mo>,</mo>
    <mo lspace="0" rspace="0">⋡</mo>
    <mo>,</mo>
    <mo lspace="0" rspace="0">⪶</mo>
</math>
