math-core/tests/snapshots/wiki_test__wiki063.snap
---
source: math-core/tests/wiki_test.rs
expression: "\\preccurlyeq, \\curlyeqprec"
---
<math>
    <mo lspace="0">≼</mo>
    <mo>,</mo>
    <mo>⋞</mo>
</math>
