math-core/tests/snapshots/wiki_test__wiki064.snap
---
source: math-core/tests/wiki_test.rs
expression: "\\succcurlyeq, \\curlyeqsucc"
---
<math>
    <mo lspace="0">≽</mo>
    <mo>,</mo>
    <mo>⋟</mo>
</math>
