math-core/tests/snapshots/wiki_test__wiki065.snap
---
source: math-core/tests/wiki_test.rs
expression: "\\precsim, \\precnsim, \\precapprox, \\precnapprox"
---
<math>
    <mo lspace="0">≾</mo>
    <mo>,</mo>
    <mo>⋨</mo>
    <mo>,</mo>
    <mo>⪷</mo>
    <mo>,</mo>
    <mo>⪹</mo>
</math>
