math-core/tests/snapshots/wiki_test__wiki069.snap
---
source: math-core/tests/wiki_test.rs
expression: "\\Box, \\square, \\blacksquare, \\diamond, \\Diamond, \\lozenge, \\blacklozenge,\\bigstar"
---
<math>
    <mi>◻</mi>
    <mo>,</mo>
    <mi>□</mi>
    <mo>,</mo>
    <mi>■</mi>
    <mo>,</mo>
    <mo>⋄</mo>
    <mo>,</mo>
    <mi>◊</mi>
    <mo>,</mo>
    <mi>◊</mi>
    <mo>,</mo>
    <mi>⧫</mi>
    <mo>,</mo>
    <mi>★</mi>
</math>
