math-core/tests/snapshots/wiki_test__wiki070.snap
---
source: math-core/tests/wiki_test.rs
expression: "\\bigcirc, \\triangle, \\bigtriangleup, \\bigtriangledown"
---
<math>
    <mi>◯</mi>
    <mo>,</mo>
    <mi>△</mi>
    <mo>,</mo>
    <mi>△</mi>
    <mo>,</mo>
    <mi>▽</mi>
</math>
