math-core/tests/snapshots/wiki_test__wiki071.snap
---
source: math-core/tests/wiki_test.rs
expression: "\\vartriangle, \\triangledown"
---
<math>
    <mi>△</mi>
    <mo>,</mo>
    <mi>▽</mi>
</math>
