math-core/tests/snapshots/wiki_test__wiki072.snap
---
source: math-core/tests/wiki_test.rs
expression: "\\blacktriangle, \\blacktriangledown, \\blacktriangleleft, \\blacktriangleright"
---
<math>
    <mi>▲</mi>
    <mo>,</mo>
    <mi>▼</mi>
    <mo>,</mo>
    <mi>◀</mi>
    <mo>,</mo>
    <mi>▶</mi>
</math>
